# abmd

./: .gitignore  CMakeLists.txt  README.md  abm.c  abm.h  abmd.def  abmd.h  abmd.sln  abmd.vcxproj  coeffs.c  coeffs.h  plot.c  plot.h  poly.c  poly.h  run_valgrind.sh  type.h
nbproject/: Makefile-Debug.mk  Makefile-Release32.mk  Makefile-Release64.mk  Makefile-Release64LongDouble.mk  Makefile-Release64LongDoubleOSX.mk  Makefile-ReleaseWin32LongDouble.mk  Makefile-ReleaseWin64LongDouble.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Release64LongDoubleOSX.bash  configurations.xml  project.xml
src/: abm.c  abm_struct.h  abmd.c  abmd_internal.h  api.c  coeffs.c  coeffs.h  poly.c  poly.h  queue.c  queue.h  rk.c  rk.h
test/: abmd_test.vcxproj  lagrange_bary.py  main.c  plot.c  plot.h
